# Internalize_CoT_Step_by_Step

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  a.sh  analyze_activations.py  convert_data.py  convert_data_aug.py  convert_data_aug_mathinstruct.py  convert_data_aug_mmiqc.py  count_tokens.py  create_multilingual_datasets.py  gen.sh  generate_countdown.py  pyproject.toml  run.sh  run_4X4.sh  run_5X5.sh  run_cot.sh  run_cot_arithmo2.sh  run_cot_mathstra_lr1e6l.sh  run_cot_mathstra_lr5e6l.sh  run_cot_mathstra_lr5e6l_augarithmo_fixed.sh  run_cot_mathstra_lr5e6l_mmiqc_fixed.sh  run_cot_mathstral.sh  run_cot_metamath.sh  run_icot_mathstra_lr5e6l.sh  run_icot_mathstra_lr5e6l_d16.sh  run_mix.sh  run_mix_1_12_fixed.sh  run_mix_1_12_fixed_cont.sh  run_mix_1_15_fixed.sh  run_mix_1_15_fixed_cont.sh  run_mix_1_18_fixed_short_alllowdigits.sh  run_mix_1_20_fixed_short.sh  run_mix_4.sh  run_mix_nosharp.sh  run_mix_nosharp_deleteeos.sh  run_mix_nosharp_deleteeos_eqn.sh  (+55 more)
gen_scripts/: generate_data.py  generate_data_4.py  generate_data_4_inter.py  generate_data_moredigits_mar13_2024_inter.py  generate_data_moredigits_mar13_2024_inter_jun5_nopad.py  generate_data_moredigits_mar13_2024_inter_jun5_pad.py  generate_data_moredigits_mar13_2024_inter_jun5_pad_includingzero.py  generate_data_moredigits_mar13_2024_inter_jun5_pad_includingzero_nonumpad.py  generate_data_moredigits_mar13_2024_inter_jun5_pad_mixdigits.py  generate_data_moredigits_mar13_2024_inter_jun5_pad_notincludingzero.py  generate_data_moredigits_mar13_2024_inter_short.py  (+10 more)
plotting/: plot_ppl.py  (+2 more)
(+79 files in other folders)
